impvove fzf, rg

--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-projectile.org
@@ -25,7 +25,8 @@
 
   (pretty-hydra-define hydra-projectile (:title "Quick Navigation" :color teal :quit-key "<XF86Launch8>")
     ("Open"
-     (("f"   counsel-projectile-find-file-dwim "Find project file")
+     (("f"   fzf "fzf")
+      ("F"   fzf-projectile "fzf-projectile")
       ("z"   counsel-projectile-switch-to-buffer "Switch to project buffer")
       ("w"   counsel-projectile-switch-project "Switch project")
       ("V"   vterm-other-window "vterm indirect")
@@ -34,11 +35,11 @@
       ("d"   dired "dired"))
 
      "Search"
-     (("a"   counsel-projectile-rg "rg in project")
-      ("A"   counsel-rg "rg")
+     (("a"   rg-menu "rg.el")
+      ("A"   rg-project "rg in project")
       ("o"   projectile-multi-occur "Occur in project")
       ("g"   counsel-projectile-git-grep "git grep")
-      ("r"   fzf "fzf here")
+      ("r"   rg-dwim "rg-dwim")
       ("R"   fzf-directory "fzf anywhere")
       ("h"   org-recent-headings)
       )
