Lowercase and silence results

--- a/emacs-nougat/nougat/emacs/autosaves.org
+++ b/emacs-nougat/nougat/emacs/autosaves.org
@@ -3,7 +3,7 @@ Auto-save will periodically save your file to backup file while you
 edit. This is great if something goes catastrophically wrong to Emacs!
 
 ** store autosaves in a single place
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (defvar emacs-autosave-directory
     (concat user-emacs-directory "autosaves/")
     "This variable dictates where to put auto saves. It is set to a
@@ -15,19 +15,19 @@ edit. This is great if something goes catastrophically wrong to Emacs!
 
   (setq auto-save-file-name-transforms `((".*"
   ,emacs-autosave-directory t)))
-#+END_SRC
+#+end_src
 
 ** set save interval
 Here, save every 20 secs or 20 keystrokes.
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq auto-save-timeout 20
         auto-save-interval 20)
-#+END_SRC
+#+end_src
 
 ** autosave every buffer that visits a file
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq auto-save-default t)
-#+END_SRC
+#+end_src
 
 ** disable lockfiles
 #+begin_src emacs-lisp :results silent
