--- a/emacs-nougat/nougat/emacs/backups.org
+++ b/emacs-nougat/nougat/emacs/backups.org
@@ -4,35 +4,35 @@ for recovering work that takes place between version-control commits
 or on unversioned files.
 
 ** store backups with the autosaves
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq backup-directory-alist
         `((".*" . ,emacs-autosave-directory)))
-#+END_SRC
+#+end_src
 
 ** keep 10 backups
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq kept-new-versions 10
         kept-old-verisons 0)
-#+END_SRC
+#+end_src
 
 ** delete old backups
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq delete-old-versions t)
-#+END_SRC
+#+end_src
 
 ** copy files to avoid various problems
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq backup-by-copying t)
-#+END_SRC
+#+end_src
 
 ** backup files even if version controlled
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq vc-make-backup-files t)
-#+END_SRC
+#+end_src
 
 ** backup every save
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package backup-each-save
     :config (add-hook 'after-save-hook 'backup-each-save))
-#+END_SRC
+#+end_src
 
