--- a/emacs-nougat/nougat/emacs/cursor.org
+++ b/emacs-nougat/nougat/emacs/cursor.org
@@ -1,14 +1,14 @@
 * cursor
 ** style
 Cursors have many styles.  I like =bar=, but I like =box= when i leave the window.
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq-default cursor-type 'bar)
   (setq-default cursor-in-non-selected-windows 'box)
-#+END_SRC
+#+end_src
 
 ** blinking
 Should the cursor blink?
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (blink-cursor-mode 1)
-#+END_SRC
+#+end_src
 
