--- a/emacs-nougat/nougat/emacs/disable.org
+++ b/emacs-nougat/nougat/emacs/disable.org
@@ -2,28 +2,28 @@
 Emacs has many, many features -- and some of them should be turned off!
 ** menubar
 The menubar just takes up space.
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (menu-bar-mode -1)
-#+END_SRC
+#+end_src
 
 ** toolbar
 The toolbar just takes up space.
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (tool-bar-mode -1)
-#+END_SRC
+#+end_src
 
 ** scrollbar
 The scrollbar just gets in the way.  Minimap or nothing!
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
 ;;disable scroll-bar mode if it's even compiled.  
 
 (scroll-bar-mode -1)
 
-#+END_SRC
+#+end_src
 
 ** startup message
 Squelch startup messages.
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq inhibit-startup-message t
         initial-scratch-message nil)
-#+END_SRC
+#+end_src
