--- a/emacs-nougat/nougat/emacs/editing.org
+++ b/emacs-nougat/nougat/emacs/editing.org
@@ -1,9 +1,9 @@
 ** editing
 Default values for basic editing options live here.
 *** use spaces
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq-default indent-tabs-mode nil)
-#+END_SRC
+#+end_src
 
 *** visual fill-column
 Provided by [[https://github.com/joostkremers/visual-fill-column][visual-fill-column]]:
@@ -20,14 +20,14 @@ fill-column is too large for the window, the text is wrapped at the window edge.
 #+end_src
 
 *** fill at 85 characters
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq-default fill-column 85)
-#+END_SRC
+#+end_src
 
 *** autofill text-mode
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (add-hook 'text-mode-hook 'turn-on-auto-fill)
-#+END_SRC
+#+end_src
 
 *** ssh for tramp
 #+begin_src emacs-lisp :results silent
