--- a/emacs-nougat/nougat/emacs/modeline.org
+++ b/emacs-nougat/nougat/emacs/modeline.org
@@ -1,23 +1,23 @@
 ** modeline
 This configures the modeline display.
 *** column number
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (column-number-mode 1)
-#+END_SRC
+#+end_src
 
 *** current time
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package timeclock
     :config (progn (display-time-mode 1)))
-#+END_SRC
+#+end_src
 
 *** shorten prompts
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (fset 'yes-or-no-p 'y-or-n-p)
-#+END_SRC
+#+end_src
 
 *** hidden modes
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
     (use-package smart-mode-line
       :config
       (progn (setq sml/shorten-modes t)
@@ -43,5 +43,5 @@ This configures the modeline display.
              (use-package anzu
                :config
                (global-anzu-mode 1))))
-#+END_SRC
+#+end_src
 
