--- a/emacs-nougat/nougat/packages/helm/setup.org
+++ b/emacs-nougat/nougat/packages/helm/setup.org
@@ -1,5 +1,5 @@
 * setup
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package helm
     :demand
     :bind (("M-x" . helm-M-x)
@@ -12,5 +12,5 @@
     :config
     (helm-mode 1)
     (require 'helm-config))
-#+END_SRC
+#+end_src
 
