--- a/emacs-nougat/nougat/packages/hydra/extras/hydra-helm.org
+++ b/emacs-nougat/nougat/packages/hydra/extras/hydra-helm.org
@@ -1,7 +1,7 @@
 * hydra-helm
 This hydra is useful for navigating and invoking features inside Helm buffers.
 ** helm-persistent-delete-marked
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (defun helm-persistent-delete-marked ()
     "Kill buffer without quitting helm."
     (interactive)
@@ -63,5 +63,5 @@ This hydra is useful for navigating and invoking features inside Helm buffers.
     ("RET" helm-maybe-exit-minibuffer))
 
   (add-to-list 'hera-hydras '(minibuffer-inactive-mode hydra-helm/body))
-#+END_SRC
+#+end_src
 
