--- a/emacs-nougat/nougat/packages/magit/setup.org
+++ b/emacs-nougat/nougat/packages/magit/setup.org
@@ -1,6 +1,6 @@
 * magit
 
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
     (use-package magit
      :straight (magit :type git
                    :host github
@@ -10,7 +10,7 @@
      :config (setq magit-log-section-commit-count 25)
     )
 
-#+END_SRC
+#+end_src
 
 * COMMENT ghub
 
