--- a/emacs-nougat/nougat/packages/org-mode/extras/amazon-book-capture.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/amazon-book-capture.org
@@ -1,5 +1,5 @@
 * amazon book capture :experimental:
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package esxml
     :config (require 'esxml-query))
 
@@ -158,5 +158,5 @@
       (save-excursion
         (beginning-of-line)
         (org-paste-subtree))))
-#+END_SRC
+#+end_src
 
