--- a/emacs-nougat/nougat/packages/org-mode/extras/org-export.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/org-export.org
@@ -17,7 +17,7 @@ Minted should be usd to dump codeblocks to PDF. This requires pygments and a wor
 python installation on the path.
 
 Insert line-breaks where needed to avoid PDF overflow.
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
 (setq org-latex-listings 'minted
       org-latex-packages-alist '(("" "minted"))
       org-latex-pdf-process
@@ -28,4 +28,4 @@ Insert line-breaks where needed to avoid PDF overflow.
                                  ("breakanywhere" "true")
                                  ("fontsize" "\\normalsize"))
 )
-#+END_SRC
+#+end_src
