--- a/emacs-nougat/nougat/support/fsharp/fsharp-mode.org
+++ b/emacs-nougat/nougat/support/fsharp/fsharp-mode.org
@@ -1,5 +1,5 @@
 * f#
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package fsharp-mode
     :init
     (progn
@@ -8,4 +8,4 @@
       (add-to-list 'exec-path "/nix/var/nix/profiles/default/bin")
       (add-to-list 'exec-path "/Users/dustinlacewell/.nix-profile/bin")
       (add-to-list 'auto-mode-alist '("\\.fs[iylx]?$" . fsharp-mode))))
-#+END_SRC
+#+end_src
