--- a/emacs-nougat/nougat/support/nix/nix-mode.org
+++ b/emacs-nougat/nougat/support/nix/nix-mode.org
@@ -1,6 +1,6 @@
 * nix-mode
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (use-package nix-mode
     :init (add-to-list 'auto-mode-alist '("\\.nix?\\'" . nix-mode)))
-#+END_SRC
+#+end_src
 
