--- a/emacs-nougat/user-outlines/base.org
+++ b/emacs-nougat/user-outlines/base.org
@@ -12,9 +12,9 @@ hacker.
 ** Disable other config files
 Since all the configuration should live in this version-controlled file, discard any
 customizations made inside Emacs.
-#+BEGIN_SRC emacs-lisp
+#+begin_src emacs-lisp :results silent
   (setq custom-file (make-temp-file ""))
-#+END_SRC
+#+end_src
 
 * org-mode
 #+INCLUDE: "../nougat/packages/org-mode/setup.org::setup"
