--- a/emacs-nougat/nougat/packages/org-mode/extras/org-babel.org
+++ b/emacs-nougat/nougat/packages/org-mode/extras/org-babel.org
@@ -36,9 +36,9 @@
 #+end_src
 
 ** disable code evaluation prompts
-#+BEGIN_SRC elisp
+#+begin_src elisp
   (setq org-confirm-babel-evaluate nil)
   (setq org-confirm-shell-link-function nil)
   (setq org-confirm-elisp-link-function nil)
-#+END_SRC
+#+end_src
 
