--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -864,7 +864,7 @@ Add fancy modeline, because why not.
                    ("Documents"
                     (extension "md" "rst" "txt" "docx" "pptx" "xlsx"))
                    ("Data"
-                    (extension "yaml" "toml" "cfg" "json" "xml" "ini"))
+                    (extension "yaml" "toml" "cfg" "json" "xml" "ini" "csv"))
                    ("Packages"
                     (extension "deb" "rpm" "dmg" "iso"))
                    ("Org"
@@ -876,7 +876,7 @@ Add fancy modeline, because why not.
                    ("Audio"
                     (extension "m4a" "aac" "wav" "mp3" "ogg"))
                    ("Images"
-                    (extension "jpg" "JPG" "webp" "png" "PNG" "jpeg" "JPEG" "bmp" "BMP" "TIFF" "tiff" "gif" "GIF" "svg"))))))
+                    (extension "jpg" "JPG" "webp" "png" "PNG" "jpeg" "JPEG" "bmp" "BMP" "TIFF" "tiff" "gif" "GIF" "svg" "HEIC" "heic"))))))
 
 
   (when (executable-find "avfsd")
@@ -892,7 +892,7 @@ Add fancy modeline, because why not.
     (dired-rainbow-define markdown    "#ffed4a" ("org" "etx" "info" "markdown" "md" "mkd" "nfo" "pod" "rst" "tex" "textfile" "txt"))
     (dired-rainbow-define database    "#6574cd" ("xlsx" "xls" "csv" "accdb" "db" "mdb" "sqlite" "nc"))
     (dired-rainbow-define media       "#de751f" ("mp3" "mp4" "MP3" "MP4" "avi" "mpeg" "mpg" "flv" "ogg" "mov" "mid" "midi" "wav" "aiff" "flac" "webm" "mkv" "m4a"))
-    (dired-rainbow-define image       "#f66d9b" ("tiff" "tif" "cdr" "gif" "ico" "jpeg" "jpg" "png" "psd" "eps" "svg" "webp"))
+    (dired-rainbow-define image       "#f66d9b" ("tiff" "tif" "cdr" "gif" "ico" "jpeg" "jpg" "png" "psd" "eps" "svg" "webp" "JPG" "HEIC" "heic"))
     (dired-rainbow-define log         "#c17d11" ("log"))
     (dired-rainbow-define shell       "#f6993f" ("awk" "bash" "bat" "sed" "sh" "zsh" "vim"))
     (dired-rainbow-define interpreted "#38c172" ("py" "ipynb" "rb" "pl" "t" "msql" "mysql" "pgsql" "sql" "r" "clj" "cljs" "scala" "js"))
