--- a/emacs-nougat/nougat/emacs/dired.org
+++ b/emacs-nougat/nougat/emacs/dired.org
@@ -18,3 +18,19 @@ Dired sorting should lump directories first because I'm used to it.
           (make-directory directory-name t)))))
 
 #+end_src
+** compute size with du
+from [[https://oremacs.com/2015/01/12/dired-file-size/][oremacs]], circa 2015:
+#+begin_src emacs-lisp :results silent
+  (defun dired-get-size ()
+    (interactive)
+    (let ((files (dired-get-marked-files)))
+      (with-temp-buffer
+        (apply 'call-process "/usr/bin/du" nil t nil "-sch" files)
+        (message
+         "Size of all marked files: %s"
+         (progn
+           (re-search-backward "\\(^[ 0-9.,]+[A-Za-z]+\\).*total$")
+           (match-string 1))))))
+
+(define-key dired-mode-map (kbd "z") 'dired-get-size)
+#+end_src
