--- a/emacs-nougat/nougat/emacs/dired.org
+++ b/emacs-nougat/nougat/emacs/dired.org
@@ -32,5 +32,5 @@ from [[https://oremacs.com/2015/01/12/dired-file-size/][oremacs]], circa 2015:
            (re-search-backward "\\(^[ 0-9.,]+[A-Za-z]+\\).*total$")
            (match-string 1))))))
 
-(define-key dired-mode-map (kbd "z") 'dired-get-size)
+;;(define-key dired-mode-map (kbd "z") 'dired-get-size)
 #+end_src
