dired-quick-sort

--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -931,6 +931,16 @@ Add fancy modeline, because why not.
 #+RESULTS:
 | dired-collapse |
 
+*** dired-quick-sort
+#+begin_src emacs-lisp :results silent
+  (use-package dired-quick-sort
+   :straight (dired-quick-sort :type git :host gitlab :repo "xuhdev/dired-quick-sort")
+   :config
+ (dired-quick-sort-setup)
+   )
+#+end_src
+
+
 ** diranged
 #+begin_src emacs-lisp :results silent
 (use-package diranged
