Update scope of ace-window default

--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -1272,7 +1272,8 @@ From [[https://github.com/dsedivec/dot-emacs-d/blob/master/lisp/window-hydra.el]
   (use-package windmove)
   (use-package transpose-frame)
   (use-package ace-window
-    :bind* (("C-<tab>" . ace-window)))
+    :bind* (("C-<tab>" . ace-window))
+    :config (setq aw-scope 'frame))
 
   (require 'windmove)
   (require 'ace-window)
