Comment out some unused packages

--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -194,7 +194,7 @@ Configuration related core editor functions are here.
  )
 #+end_src
 
-** bm
+** COMMENT bm
 #+begin_src emacs-lisp :results silent
   (use-package bm
     :bind (("<C-f2>" . bm-toggle)
@@ -212,7 +212,7 @@ Configuration related core editor functions are here.
  )
 #+end_src
 
-** olivetti
+** COMMENT olivetti
 #+begin_src emacs-lisp :results silent
   (use-package olivetti
    :straight (olivetti :type git :host github :repo "rnkn/olivetti")
@@ -226,7 +226,7 @@ Configuration related core editor functions are here.
   ;; (use-package poly-org
   ;;   :hook ((org-mode). poly-org-mode))
 #+end_src
-** deadgrep
+** COMMENT deadgrep
 #+begin_src emacs-lisp :results silent
 (use-package deadgrep)
 #+end_src
