--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -205,6 +205,14 @@ Configuration related core editor functions are here.
 (global-set-key (kbd "<left-fringe> <mouse-1>") 'bm-toggle-mouse)
 #+end_src
 
+** eyebrowse
+#+begin_src emacs-lisp :results silent
+k  (use-package eyebrowse
+   :config
+ (eyebrowse-mode t
+   ))
+#+end_src
+
 ** COMMENT latex-input
 #+begin_src emacs-lisp :results silent
 (use-package latex
