Improve dockerfile mode autoactivation

--- a/emacs-nougat/user-outlines/gvoysey.org
+++ b/emacs-nougat/user-outlines/gvoysey.org
@@ -207,7 +207,7 @@ Configuration related core editor functions are here.
 
 ** eyebrowse
 #+begin_src emacs-lisp :results silent
-k  (use-package eyebrowse
+(use-package eyebrowse
    :config
  (eyebrowse-mode t
    ))
