update avy usage

--- a/emacs-nougat/nougat/emacs/avy.org
+++ b/emacs-nougat/nougat/emacs/avy.org
@@ -1,7 +1,7 @@
 * avy
 Avy is awesome; set some keybindings.
 #+begin_src emacs-lisp :results silent
-(global-set-key (kbd "C-;") 'avy-goto-char)
+(global-set-key (kbd "C-;") 'avy-goto-char-timer)
 (global-set-key (kbd "C-:") 'avy-goto-char-2)
 (global-set-key (kbd "M-g f") 'avy-goto-line)
 (global-set-key (kbd "M-g w") 'avy-goto-word-1)
